<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        tools:context=".MulberryDiseaseClassifierActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:background="#FAFAFA"
            >

            <ProgressBar
                android:id="@+id/plant_progressbar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <ImageView
                android:id="@+id/plant_back_button"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:padding="15dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/plant_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/montserrat_alternates_bold"

                android:text="@string/splash_title"
                android:textColor="@color/saddle_brown"

                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/plant_back_button"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView

                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_style_white"
                app:cardCornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plant_header"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/plant_classify_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/classifier_line_1"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/plant_classify_text_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="24dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="24dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="Accuracy"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/plant_classify_text" />

                    <TextView
                        android:id="@+id/plant_classify_text_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="24dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="24dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="Processing Time"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/plant_classify_text_2" />

                    <ImageView
                        android:id="@+id/plant_upload_image"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/upload"

                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/plant_classify_text_3" />

                    <TextView
                        android:id="@+id/plant_select_image_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/lalezar"
                        android:text="@string/classifier_line_2"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/plant_upload_image" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/plant_check_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:elevation="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/button_style_red"
                android:text="Check"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>